--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.0",
+    "chart.js": "^2.9.4",
     "history": "^5.0.0",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router": "^6.0.0-beta.0",
