--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.0",
+    "@types/react-helmet": "^6.1.0",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
     "formik": "^2.1.5",
@@ -32,8 +33,8 @@
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.2",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1",
     "uuid": "^8.3.0",
+    "web-vitals": "^1.0.1",
     "yup": "^0.29.3"
   },
   "scripts": {
