--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.0",
+    "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
+    "firebase": "^8.2.7",
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "lodash": "^4.17.19",
@@ -32,6 +34,7 @@
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.2",
+    "reactstrap": "^8.9.0",
     "typescript": "^4.1.2",
     "uuid": "^8.3.0",
     "web-vitals": "^1.0.1",
