--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.0",
+    "@types/yup": "^0.29.11",
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
     "firebase": "^8.2.7",
+    "firebase-admin": "^9.5.0",
+    "firebase-functions": "^3.13.1",
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "lodash": "^4.17.19",
@@ -38,7 +41,7 @@
     "typescript": "^4.1.2",
     "uuid": "^8.3.0",
     "web-vitals": "^1.0.1",
-    "yup": "^0.29.3"
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
